@@ -6,8 +6,9 @@ of the following people:
 
 The following submitted code, packages or analysis, and deserve special thanks:
 
-  - Alejandro Garrido Mota
-  - Jakub Wilk
+  Alejandro Garrido Mota
+  Jakub Wilk
+  Jason A. Pfeil
 
 Thanks to the following, who submitted detailed bug reports and excellent suggestions:
 
